[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/parallax_mountain_pack/layers/parallax-mountain-mountains.png" type="Texture" id=2]
[ext_resource path="res://assets/music/Medieval_Start-UpTutorial.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/parallax_mountain_pack/layers/parallax-mountain-montain-far.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/parallax_mountain_pack/layers/parallax-mountain-foreground-trees.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/parallax_mountain_pack/layers/parallax-mountain-bg.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/parallax_mountain_pack/layers/parallax-mountain-trees.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/themes/PixelTheme.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 8 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 320, 180 )
scale = Vector2( 2.4, 2.3 )
transform = Transform2D( 2.4, 0, 0, 2.3, 320, 180 )

[node name="Background" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 2.57358, 1.77176 )
scale = Vector2( 0.999592, 0.999592 )
texture = ExtResource( 6 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 1 )
motion_mirroring = Vector2( 272, 0 )

[node name="FarMountains" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 4 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 544, 0 )

[node name="Mountains" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 2 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 544, 0 )

[node name="FarTrees" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 7 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 544, 0 )

[node name="Trees" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 41.0
margin_right = 320.0
margin_bottom = 122.0
theme = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.863281, 0, 0.526062, 1 )
custom_fonts/font = SubResource( 1 )
text = "TALES OF
RETROKNIGHT"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -18.0
margin_bottom = 18.0
theme = ExtResource( 9 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../Quit")
theme = ExtResource( 9 )
text = "Start"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 640.0
margin_bottom = 36.0
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Enter_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
